--- a/css/index.css
+++ b/css/index.css
@@ -44,24 +44,25 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: dodgerblue;
+    background: 
+    linear-gradient( to bottom, #000, blueviolet 50%, violet 90%, #223 75% );
+    /* background-color: dodgerblue; */
     border: 4px solid black;
 }
 
 .carousel>img {
     height: 300px;
     width: 300px;
-    border-radius: 10px;
+    border-radius: 50%;
     object-fit: cover;
-    border: 4px dashed aliceblue;
+    box-shadow: 12px 12px 12px blueviolet;
 }
 
 header {
     border: 2px dashed lime;
 }
 
-.layer:hover {
-    /* opacity: 0.5; */
+.btm-layer:hover {
     /* animation: addColor ; */
     mask-position: 100% 0%;
 }
@@ -75,12 +76,17 @@ header {
     }
 }
 
-.layer {
+.btm-layer {
     position: absolute;
+    border: thick solid aliceblue;
     mask-image: url("../mask/mask.png");
     mask-size: cover;
-    mask-position: 0% 0% ;
-    transition: mask-position 500ms steps(5);
+    mask-position: 0% 0%;
+    transition: mask-position 150ms steps(5) 0.2s;
+}
+
+.up-layer {
+    mix-blend-mode: luminosity;
 }
 
 .education {}
