--- a/css/index.css
+++ b/css/index.css
@@ -17,12 +17,24 @@ body::after {
     line-height: 1.7;
     text-align: center;
     margin: 0;
-    color: aliceblue;
-    background: #223;
+    color: var(--light-color);
+    background: var(--dark-color);
+}
+
+body > * {
+    overflow: hidden;
 }
 
 ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     list-style: none;
+    border: 3px dashed #2469cc;
+}
+
+li {
+    border: 3px solid #cc2475;
 }
 
 main {
@@ -34,8 +46,8 @@ aside {
 }
 
 section {
-    display: grid;
-    grid-template-areas: "a b c";
+    /* display: grid;
+    grid-template-areas: "aa bb cc"; */
 }
 
 footer {
@@ -50,6 +62,9 @@ svg {
     color: var(--light-color);
 }
 
+
+/* bumper */
+
 .bumper {
     height: 80vh;
     display: flex;
@@ -60,16 +75,25 @@ svg {
     border-bottom: thick solid black;
 }
 
+.bumper > div {
+    position: absolute;
+    top: 70%;
+    width: 250px;
+    height: 40px;
+    background: linear-gradient(30deg, var(--third-color), var(--second-color));
+    border-radius: 15px;
+    border-bottom: 3px solid var(--dark-color);
+    border-top: 3px solid var(--light-color);
+    border-left: 3px solid transparent;
+    border-right: 3px solid transparent;
+}
+
 .bumper > img {
-    height: 300px;
-    width: 300px;
+    height: 400px;
+    width: 400px;
     border-radius: 50%;
     object-fit: cover;
     box-shadow: 12px 12px 12px blueviolet;
-}
-
-header {
-    /* border: 2px dashed lime; */
 }
 
 @keyframes addColor {
