--- a/css/index.css
+++ b/css/index.css
@@ -17,6 +17,7 @@ body::after {
     margin: 0;
     color: var(--light-color);
     background: var(--dark-color);
+    scroll-behavior: calc();
 }
 body > * {
     overflow: hidden;
