--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,8 @@
    --third-color: blueviolet;
    --light-color : aliceblue;
    --dark-color : #223;
+   --color-gradient-medium : blueviolet; 
+   --color-gradient-light : violet; 
 }
 body,
 body::before,
@@ -80,16 +82,16 @@ a:hover > div {
     text-align: center;
     margin: 5px;
 }
-footer > .container {}
+/* footer > .container {} */
 .reveal {
     opacity: 1;
     transition: 1s opacity;
 }
 
 /* presentation */
-.presentation {}
-.container--presentation {}
-.block--presentation {}
+/* .presentation {} */
+/* .container--presentation {} */
+/* .block--presentation {} */
 .text--presentation > * {
     border-bottom: 1px dashed var(--light-color);
 }
@@ -111,16 +113,16 @@ footer > .container {}
     min-height: 60px;
 }
 .text--experience {
-    border-top: 1px dashed var(--light-color);
     max-width: 200px;
 }
 .text--experience > p {
+    border-top: 1px dashed var(--light-color);
     width: 100%;
     text-align: start;
 }
 
 /* skills */
-.container--skills {}
+/* .container--skills {} */
 .block--skills {
     flex-direction: row;
     justify-content: space-between;
@@ -132,7 +134,7 @@ footer > .container {}
 }
 
 /* education */
-.container--education {}
+/* .container--education {} */
 aside > p {
     font-size: 2rem;
     font-weight: bolder;
@@ -141,16 +143,16 @@ aside > p {
     min-width: 300px;
 }
 .text--education {
-    border-top: 1px dashed var(--light-color);
     margin-bottom: 30px;
 }
 .text--education > p {
-    min-width: 200px;
+    border-top: 1px dashed var(--light-color);
+    margin-bottom: 30px;
+    min-width: fit-content;
 }
 
 /* footer */
-.container--footer {
-}
+/* .container--footer {} */
 .block--footer {
     margin: 50px;
     flex-direction: row;
