--- a/css/index.css
+++ b/css/index.css
@@ -30,6 +30,7 @@ body > * {
 main,
 aside,
 aside div,
+header div,
 footer div {
     display: flex;
     flex-direction: column;
@@ -63,6 +64,21 @@ a:hover > div {
     border-radius: 5px;
     background-color: var(--light-color);
 }
+details  {
+    max-width: 400px;
+    opacity: 0.4;
+}
+details[open] {
+    opacity: 1;
+}
+details > div> p {
+    text-align: left;
+    /* outline: 1px solid black; */
+}
+summary {
+    padding-top: 40px;
+    list-style: none;
+}
 
 /* blocs */
 .container {
@@ -82,6 +98,7 @@ a:hover > div {
     text-align: center;
     margin: 5px;
 }
+
 /* footer > .container {} */
 .reveal {
     opacity: 1;
@@ -223,7 +240,6 @@ svg {
          );
 }
 
-
 /* button */
 .bumper:hover > .btn {
     background: var(--second-color);
@@ -231,8 +247,8 @@ svg {
 }
 .bumper > .btn {
     position: relative;
-    top: 40%;
-    right: 150px;
+    top: 30%;
+    /* right: 5%; */
     min-width: 150px;
     outline: 2px solid var(--second-color);
     padding: 0 15px;
@@ -242,7 +258,7 @@ svg {
         var(--second-color)
         );
     border-radius: 6px;
-    color: violet;
+    color: var(--light-color);
     border-bottom: 4px solid var(--second-color);
     border-top: 4px solid var(--light-color);
     border-left: 4px solid var(--light-color);
@@ -254,13 +270,13 @@ svg {
     transition: filter 0.5s;
 }
 .btn:not(:hover) > * {
-    transition: filter 2s;
+    transition: filter 0.4s;
 }
 .btn > p {
     font-size: large;
     font-weight: 600;
     margin: 10px 0 10px 0;
-    filter: blur(1.5rem);
+    /* filter: blur(1.5rem); */
 }
 .bumper > img {
     height: 300px;
@@ -310,3 +326,11 @@ svg {
         box-shadow: inset 0.5em 0.5em 0.2rem var(--second-color);
     }
 }
+
+/* screen */
+/* @media screen and (max-width: 700px) {
+    .bumper > .btn  > * {
+        filter: blur(1px);
+        transition: filter 0.5s;
+    }
+} */
