--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,7 @@
    --dark-color : #223;
    --color-gradient-medium : blueviolet; 
    --color-gradient-light : violet; 
+   --short-transition: 0.4s;
 }
 body,
 body::before,
@@ -24,32 +25,32 @@ body::after {
 body > * {
     overflow: hidden;
 }
-/* * {outline: 1px solid var(--first-color);} */
+
 
 /* semantics */
-main,
-aside,
-aside div,
-header div,
-footer div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
 main {
-    background: var(--dark-color);
+    display: grid;
+    grid-template-columns: 60vw 1fr;
+    grid-template-rows: auto;
 }
 aside {
+    transition: opacity 0.3s;
     opacity: 0;
-    width: 100%;
-    margin: 10vh 0;
+    margin: 20px;
+    /* outline: 1px solid yellow; */
+    outline: 1px dashed yellowgreen;
 }
 footer {
-    height: 80vh;
+    height: 78vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+ul {
+    list-style: none;
 }
 p {
-    font: 900;
+    font-weight: 900;
     font-size: large;
 }
 h3 {
@@ -64,126 +65,103 @@ a:hover > div {
     border-radius: 5px;
     background-color: var(--light-color);
 }
-details:hover {
-    cursor: pointer;
-}
+
+
+/* details */
 details {
-    max-width: 350px;
-    opacity: 0.2;
-    /* outline: 1px solid black; */
+    opacity: 0.5;
+    overflow: hidden;
+    /* outline: 1px solid violet; */
 }
 details[open] {
     opacity: 1;
-    transition: all 0.5s;
-}
-details > div> p {
-    text-align: left;
+    transition: opacity var(--short-transition);
+    outline: 1px dashed yellowgreen;
 }
 summary {
-    margin: 10vh 1vh;
     list-style: none;
+    width: 300px;
+
 }
+summary:hover {
+    cursor: pointer;
+}
+
+
+/* details animations */
+details[open]:has(+.scroll--down:hover) > summary {
+    opacity: 0;
+}
+details[open]:has(+.scroll--down) > summary {
+    transition: opacity 0.5s;
+}
+
+details[open]:has(+.scroll--down:hover) > .scroll {
+    translate: 0 -300px;
+}
+details[open]:has(+.scroll--down) > .scroll {
+    transition: translate 3s;
+}
+.scroll--down {
+    width: 100%;
+    border-bottom: 50px solid var(--color-gradient-medium);
+}
+
+
 
 /* blocs */
 .container {
-    min-width: 80%;
-    margin: 5px;
-}
-.text > p {
-    max-width: 80%;
-    font-weight: lighter;
-    font-size: medium;
-    margin: 5px;
+    display: grid;
+    grid-template-columns: 1fr 1fr; 
 }
 .block {
-    margin: 5px;
+    display: flex;
+    margin: 15px;
+    min-width: 250px;
+    /* outline: 1px dashed yellowgreen; */
+}
+.block:has(.block--header) {
+    display: flex;
+    justify-content: center;
+}
+.block--nav {
+    display: flex;
+    width: 80%;
+    justify-content: space-between;
+}
+.block--skills {
+    flex-direction: row;
+    justify-content: center;
+}
+.block--experience {
+    align-items: flex-start;
+    flex-direction: column;
 }
 .text {
-    text-align: center;
+    justify-content: center;
+    text-align: start;
     margin: 5px;
+    max-width: 200px;
+}
+.text > * {
+    text-align: left;
+    max-width: 300px;
+     max-height: 200px;
+    font-weight: lighter;
+    font-size: medium;
+    margin: 15px;
+    /* outline: 1px dashed red; */
 }
 
-/* footer > .container {} */
+
+
+/* reveal */
 .reveal {
     opacity: 1;
     transition: 1s opacity;
 }
 
-/* presentation */
-/* .presentation {} */
-/* .container--presentation {} */
-/* .block--presentation {} */
-.text--presentation > * {
-    border-bottom: 1px dashed var(--light-color);
-}
 
-/* experience */
-.container--experience {
-    flex-direction: row;
-    align-items: stretch;
-} 
-.block--experience {
-    display: flex;
-    justify-content: stretch;
-    max-width:30%;
-    padding: 20px 5px;
-    border-top: 1px dashed var(--light-color);
-    border-bottom: 1px dashed var(--light-color);
-}
-.block--experience > h3 {
-    min-height: 60px;
-}
-.text--experience {
-    max-width: 200px;
-}
-.text--experience > p {
-    border-top: 1px dashed var(--light-color);
-    width: 100%;
-    text-align: start;
-}
-
-/* skills */
-/* .container--skills {} */
-.block--skills {
-    flex-direction: row;
-    justify-content: space-between;
-    max-width: 400px;
-    width: 100%;
-}
-.text--skills > p {
-    font-size: 2rem;
-}
-
-/* education */
-/* .container--education {} */
-aside > p {
-    font-size: 2rem;
-    font-weight: bolder;
-}
-.block--education {
-    min-width: 300px;
-}
-.text--education {
-    margin-bottom: 30px;
-}
-.text--education > p {
-    border-top: 1px dashed var(--light-color);
-    margin-bottom: 30px;
-    min-width: fit-content;
-}
-
-/* footer */
-/* .container--footer {} */
-.block--footer {
-    margin: 50px;
-    flex-direction: row;
-    justify-content: space-around;
-    max-width: 400px;
-    width: 100%;
-}
-.text--footer > p {
-    font-size: 2rem;
-}
 
 /* icons */
 svg {
@@ -191,25 +169,26 @@ svg {
     max-width: 30px;
 }
 .items {
-    border-top: 1px dashed var(--light-color);
+    padding: 0 12px;
+    max-width: 90px;
+}
+.items > * {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: fit-content;
-    padding: 0 12px;
-    max-width: 90px;
 }
-.icons__small > svg {
+.icons__small svg {
     max-width: 25px;
 }
 .items:hover .icons__small,
 .items:hover .icons {
     border-radius: 3px;
-    transition: 0.5s ease-out border-radius;
+    transition: var(--short-transition) ease-out border-radius;
 }
 .icons:not(:hover), .icons__small:not(:hover) {
     border-radius: 25px;
-    transition: 0.5s ease-in-out border-radius;
+    transition: var(--short-transition) ease-in-out border-radius;
 }
 .icons, .icons__small {
     display: flex;
@@ -221,74 +200,58 @@ svg {
     border-radius: 25px;
     cursor: pointer;
 }
-.icons > p {
-    color: var(--first-color);
-    font-size: large;
-    font-weight: 600;
- }
+
 
 /* bumper */
 .bumper {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    min-height: 70vh;
     width: 100%;
     background: 
     linear-gradient( 
         to bottom, 
-        #223,
-        blueviolet 50%, 
-        violet 90%, 
-        violet 75%
+        #223 40%,
+        blueviolet 80%, 
+        violet 99% 
          );
 }
-
-/* button */
-.bumper:hover > .btn {
-    background: var(--second-color);
-    animation: 2s linear 0s infinite running glisten;
-}
-.bumper > .btn {
+.bumper::after {
+    opacity: 0;
     position: relative;
-    top: 30%;
-    /* right: 5%; */
-    min-width: 150px;
-    outline: 2px solid var(--second-color);
-    padding: 0 15px;
-    background: linear-gradient(
-        160deg, 
-        var(--third-color), 
-        var(--second-color)
-        );
-    border-radius: 6px;
-    color: var(--light-color);
-    border-bottom: 4px solid var(--second-color);
-    border-top: 4px solid var(--light-color);
-    border-left: 4px solid var(--light-color);
-    border-right: 4px solid var(--second-color);
-    cursor: pointer;
+    top: -150px;
+    width: 200px;
+    height: 200px;
+    content: attr(data-description);
 }
-.bumper:hover > .btn >* {
-    filter: blur(1px);
-    transition: filter 0.5s;
+.bumper:hover::after {
+    opacity: 0.5;
+    transition: opacity var(--short-transition);
 }
-.btn:not(:hover) > * {
-    transition: filter 0.4s;
-}
-.btn > p {
-    font-size: large;
-    font-weight: 600;
-    margin: 10px 0 10px 0;
-    /* filter: blur(1.5rem); */
+.bumper:not(:hover)::after {
+    transition: opacity var(--short-transition);
 }
 .bumper > img {
-    height: 300px;
-    width: 300px;
-    border-radius: 50%;
+    height: 200px;
+    width: 200px;
     object-fit: cover;
+    border-radius: 50%;
+    filter: blur(5px);
     mix-blend-mode: luminosity;
+    border: 15px solid var(--dark-color);
 }
+.bumper:hover > img {
+    mix-blend-mode: normal;
+    filter: blur(0);
+    transition: all var(--short-transition);
+}
+.bumper:not(:hover) > img {
+    transition: filter var(--short-transition);    
+}
+
+
+/* mask */
 .btm-layer {
     position: absolute;
     mask-image: url("../mask/mask.png");
@@ -297,7 +260,7 @@ svg {
     -webkit-mask-size: cover;
     mask-position: 0% 0%;
     -webkit-mask-position: 0% 0%;
-    opacity: 0.7;
+    opacity: 1;
 }
 .up-layer {
     opacity: 0;
@@ -307,6 +270,50 @@ svg {
     mask-position: 100% 0%;
     -webkit-mask-position: 100% 0%;
 }
+
+
+/* button */
+div:hover > h1 {
+    background: var(--second-color);
+    animation: 2s linear 0s infinite running glisten;
+}
+h1 {
+    position: relative;
+    /* top: 50%; */
+    min-width: 300px;
+    padding: 15px 5px;
+    outline: 2px solid var(--second-color);
+    background: linear-gradient(
+        160deg, 
+        var(--third-color), 
+        var(--second-color)
+        );
+    border-radius: 6px;
+    color: var(--light-color);
+    border-bottom: 4px solid var(--second-color);
+    border-top: 2px solid var(--light-color);
+    border-left: 2px solid var(--light-color);
+    border-right: 2px solid var(--second-color);
+    /* cursor: pointer; */
+}
+.btn > p {
+    font-size: large;
+    font-weight: 600;
+    margin: 10px 0 10px 0;
+    filter: blur(1px);
+}
+
+
+/* blur animation */
+.bumper:hover > .btn > * {
+    filter: blur(0);
+    transition: filter var(--short-transition);
+}
+.btn:not(:hover) > * {
+    transition: filter var(--short-transition);
+}
+
+
 
 /* animations */
 @keyframes brush {
@@ -331,10 +338,18 @@ svg {
     }
 }
 
+
 /* screen */
-/* @media screen and (max-width: 700px) {
-    .bumper > .btn  > * {
-        filter: blur(1px);
-        transition: filter 0.5s;
+
+@media (aspect-ratio < 1/1 ) {
+    main {
+        display: flex;
+        flex-direction: column;
     }
-} */
+    .text > *  {
+        font-size: small;
+    }
+    .container {
+        display: block;
+    }
+}
