--- a/css/index.css
+++ b/css/index.css
@@ -20,7 +20,7 @@ body::after {
     margin: 0;
     color: var(--light-color);
     background: var(--dark-color);
-    scroll-behavior: calc();
+    scroll-behavior: smooth;
 }
 body > * {
     overflow: hidden;
@@ -37,8 +37,8 @@ aside {
     transition: opacity 0.3s;
     opacity: 0;
     margin: 20px;
+    outline: 1px dotted var(--color-gradient-medium);
     /* outline: 1px solid yellow; */
-    outline: 1px dashed yellowgreen;
 }
 footer {
     height: 78vh;
@@ -65,31 +65,45 @@ a:hover > div {
     border-radius: 5px;
     background-color: var(--light-color);
 }
+svg {
+    max-width: 50px;
+    opacity: 1;
+}
 
 
 /* details */
 details {
     opacity: 0.5;
-    overflow: hidden;
-    /* outline: 1px solid violet; */
 }
 details[open] {
     opacity: 1;
-    transition: opacity var(--short-transition);
-    outline: 1px dashed yellowgreen;
+    transition: all var(--short-transition);
+    outline: 1px dotted var(--color-gradient-medium);
+    padding-bottom: 60px;
 }
 summary {
+    display: flex;
+    flex-direction: column;
+    min-height: 100px;
+    padding: 15px;
+    margin: 5px;
     list-style: none;
-    width: 300px;
-
+    border-bottom: 4px solid skyblue;
+    /* align-items: start; */
+    /* width: 90%; */
+    /* outline: 1px dotted var(--color-gradient-medium); */
 }
+
 summary:hover {
     cursor: pointer;
+}
+footer summary {
+    align-items: center;
 }
 
 
 /* details animations */
-details[open]:has(+.scroll--down:hover) > summary {
+/* details[open]:has(+.scroll--down:hover) > summary {
     opacity: 0;
 }
 details[open]:has(+.scroll--down) > summary {
@@ -105,8 +119,7 @@ details[open]:has(+.scroll--down) > .scroll {
 .scroll--down {
     width: 100%;
     border-bottom: 50px solid var(--color-gradient-medium);
-}
-
+} */
 
 
 /* blocs */
@@ -114,45 +127,49 @@ details[open]:has(+.scroll--down) > .scroll {
     display: grid;
     grid-template-columns: 1fr 1fr; 
 }
+header > .container {
+    grid-template-columns: 60vw 1fr;
+}
+.container--footer {
+    padding: 50px;
+}
 .block {
     display: flex;
     margin: 15px;
     min-width: 250px;
-    /* outline: 1px dashed yellowgreen; */
 }
 .block:has(.block--header) {
-    display: flex;
     justify-content: center;
 }
 .block--nav {
-    display: flex;
     width: 80%;
     justify-content: space-between;
 }
 .block--skills {
-    flex-direction: row;
     justify-content: center;
 }
 .block--experience {
     align-items: flex-start;
     flex-direction: column;
 }
-.text {
-    justify-content: center;
-    text-align: start;
-    margin: 5px;
-    max-width: 200px;
+.scroll {
+    overflow-y: scroll;
+    max-height: 300px;
+    width: fit-content;
+    margin-bottom: 200px;
+    position: relative;
+    left: 2vw;
 }
+/* .text {
+    margin: 5px;
+} */
 .text > * {
+    max-width: 30ch;
     text-align: left;
-    max-width: 300px;
-     max-height: 200px;
     font-weight: lighter;
     font-size: medium;
     margin: 15px;
-    /* outline: 1px dashed red; */
 }
-
 
 
 /* reveal */
@@ -160,7 +177,6 @@ details[open]:has(+.scroll--down) > .scroll {
     opacity: 1;
     transition: 1s opacity;
 }
-
 
 
 /* icons */
@@ -207,23 +223,30 @@ svg {
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 70vh;
-    width: 100%;
+    height: 380px;
     background: 
     linear-gradient( 
         to bottom, 
-        #223 40%,
+        #223 45%,
         blueviolet 80%, 
-        violet 99% 
+        violet 100%
          );
+}
+.bumper::before {
+    position: relative;
+    top: -250px;
+    left: 25%;
+    display: block;
+    width: 100%;
+    content: attr(data-description);
+    z-index: 11;
 }
 .bumper::after {
     opacity: 0;
-    position: relative;
-    top: -150px;
-    width: 200px;
+    display: block;
+    width: 100%;
     height: 200px;
-    content: attr(data-description);
+    content: "";
 }
 .bumper:hover::after {
     opacity: 0.5;
@@ -239,15 +262,16 @@ svg {
     border-radius: 50%;
     filter: blur(5px);
     mix-blend-mode: luminosity;
-    border: 15px solid var(--dark-color);
 }
 .bumper:hover > img {
+    border: 55px solid var(--dark-color);
     mix-blend-mode: normal;
     filter: blur(0);
     transition: all var(--short-transition);
 }
 .bumper:not(:hover) > img {
-    transition: filter var(--short-transition);    
+    border: 15px solid transparent;
+    transition: all var(--short-transition);    
 }
 
 
@@ -279,7 +303,6 @@ div:hover > h1 {
 }
 h1 {
     position: relative;
-    /* top: 50%; */
     min-width: 300px;
     padding: 15px 5px;
     outline: 2px solid var(--second-color);
@@ -296,23 +319,22 @@ h1 {
     border-right: 2px solid var(--second-color);
     /* cursor: pointer; */
 }
-.btn > p {
+
+
+/* blur animation */
+/* .btn > p {
     font-size: large;
     font-weight: 600;
     margin: 10px 0 10px 0;
     filter: blur(1px);
-}
-
-
-/* blur animation */
-.bumper:hover > .btn > * {
+} */
+/* .bumper:hover > .btn > * {
     filter: blur(0);
     transition: filter var(--short-transition);
 }
 .btn:not(:hover) > * {
     transition: filter var(--short-transition);
-}
-
+} */
 
 
 /* animations */
@@ -341,9 +363,10 @@ h1 {
 
 /* screen */
 
-@media (aspect-ratio < 1/1 ) {
+@media (aspect-ratio < 1/1 ) or (max-height: 700px) {
     main {
         display: flex;
+        justify-content: center;
         flex-direction: column;
     }
     .text > *  {
@@ -351,5 +374,17 @@ h1 {
     }
     .container {
         display: block;
+    }
+    .block {
+        margin: 0;
+    }
+    .block--experience > *, .scroll {
+        margin-left: 5vw;
+    }
+    details > .bumper > img {
+        /* border: 5px solid var(--dark-color); */
+        mix-blend-mode: normal;
+        filter: blur(0);
+        transition: all var(--short-transition);
     }
 }
